--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "asyncclick>=8.1.8",
     "bs4>=0.0.2",
     "httpx>=0.28.1",
+    "jinja2>=3.1.6",
     "playwright>=1.53.0",
 ]
