--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,10 @@ dependencies = [
     "jinja2>=3.1.6",
     "playwright>=1.53.0",
 ]
+
+[project.scripts]
+beholder = "beholder.core.cli:cli"
+
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
